# posixbench

./: .gitmodules  CMakeLists.txt  Makefile  README.md  bench-close.cpp  bench-eventfd-nonblock.cpp  bench-eventfd.c  bench-eventfd.cpp  bench-gettime.cpp  bench-getuid.cpp  bench-mmap-2mb.cpp  bench-mmap-4kb.cpp  bench-mmap-munmap-2mb.cpp  bench-mmap-munmap-4kb.cpp  bench-mmap-munmap.cpp  bench-mmap-populate-2mb.cpp  bench-mmap-populate-4kb.cpp  bench-mmap-populate-large.cpp  bench-mmap-populate-munmap-2mb.cpp  bench-mmap-populate-munmap-4kb.cpp  bench-mmap-populate-munmap.cpp  bench-mmap-populate-small.cpp  bench-mmap.cpp  bench-mprotect.cpp  bench-munmap-2mb.cpp  bench-munmap-4kb.cpp  bench-munmap-populated-2mb.cpp  bench-munmap-populated-4kb.cpp  bench-munmap-populated-large.cpp  bench-munmap-populated-small.cpp  bench-munmap.cpp  bench-open.cpp  bench-pagefault-large.cpp  bench-pagefault-overhead.cpp  bench-pagefault-signal.cpp  bench-pagefault-small.cpp  bench-pagefault.c  bench-pagefault.cpp  bench-pthread-create.cpp  bench-pthread-kill.cpp  (+19 more)
results/intel/core-i7-4790/: README.md  bench-pthread-mutex.csv  bench-pthread-nop.csv  bench-pthread-rwlock-rd.csv  bench-pthread-rwlock-wr.csv  bench-pthread-spinlock.csv  bench-pthread-yield.csv  cpuinfo  uname
results/intel/core-i7-8565U/: README.md  bench-pthread-mutex.csv  bench-pthread-nop.csv  bench-pthread-rwlock-rd.csv  bench-pthread-rwlock-wr.csv  bench-pthread-spinlock.csv  bench-pthread-yield.csv  cpuinfo  uname
results/template/: README.html  README.md
scripts/: cpuinfo.sh  hugepages.sh  plot-energy.py  plot-latency.py  turbo-boost.sh
